force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__CampaignEndDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__CampaignEndDate__c</fullName>
    <label>Campaign End Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CampaignEndDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>