force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__CampaignType__c.field-meta.xml
<CustomField>
    <fullName>ssot__CampaignType__c</fullName>
    <label>Campaign Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CampaignType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>