force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__ExpectedResponsePercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__ExpectedResponsePercent__c</fullName>
    <label>Expected Response Percent</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ExpectedResponsePercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>