force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__ParentCampaignId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ParentCampaignId__c</fullName>
    <label>Parent Campaign Status</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ParentCampaignId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>