force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__rel_1697761211397_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761211397_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign_ParentCampaignId_map_Campai_rel</label>
    <referenceTo>ssot__Campaign__dlm</referenceTo>
    <relationshipLabel>Campaign_ParentCampaignId_map_Campai_rel</relationshipLabel>
    <relationshipName>rel_1697761211397_end</relationshipName>
    <type>Lookup</type>
</CustomField>