force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__TotalFormSubmissionCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalFormSubmissionCount__c</fullName>
    <label>Total Form Submission Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalFormSubmissionCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>