force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__TotalLandingPageFormSbmsCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalLandingPageFormSbmsCount__c</fullName>
    <label>TotalLanding Page Form Submission Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalLandingPageFormSbmsCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>