force-app/main/default/objects/ssot__Campaign__dlm/fields/ssot__TotalLandingPageViewCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__TotalLandingPageViewCount__c</fullName>
    <label>Total Landing Page View Ct</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TotalLandingPageViewCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>